setup.py build no longer builds documentation

--- a/ChangeLog
+++ b/ChangeLog
@@ -68,6 +68,7 @@ RestAuth 0.6.1 (DD MMMM YYYY)
   * The Exception- and Request middlewares have been merged for a minor speed
     improvement.
   * Killed the last traces of epydoc documentation.
+  * python setup.py build no longer builds documentation.
 
 RestAuth 0.6.0 (15 September 2012)
 
