--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ restauth (0.6.0-454-gc8d0802-1) unstable; urgency=low
   * Start preperations for 0.6.1 release
   * Deprecate paths.patch, documentation should be generated with -t debian.
   * Deprecate wsgi-check-permissions.patch, should not be needed.
+  * No longer build with --upstream-tree=branch
 
  -- Mathias Ertl <apt-repository@fsinf.at>  Sat, 23 Mar 2013 13:24:16 +0100
 
