--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-restauth (0.6.0-455-gf68b808-1) unstable; urgency=low
+restauth (0.6.0-456-gfdf5a7b-1) unstable; urgency=low
 
   * Start preperations for 0.6.1 release
   * Deprecate paths.patch, documentation should be generated with -t debian.
