--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ restauth (0.6.0-456-gfdf5a7b-1) unstable; urgency=low
   * Deprecate paths.patch, documentation should be generated with -t debian.
   * Deprecate wsgi-check-permissions.patch, should not be needed.
   * No longer build with --upstream-tree=branch
+  * Now depend on >= Django 1.4
 
  -- Mathias Ertl <apt-repository@fsinf.at>  Sat, 23 Mar 2013 13:24:16 +0100
 
