--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ restauth (0.6.1-1) unstable; urgency=low
     variables.
   * Require python-restauth-common (>= 0.6.1)
   * Cleanup debian/rules.
+  * Use machine-readable debian/copyright
 
  -- Mathias Ertl <apt-repository@fsinf.at>  Sun, 07 Apr 2013 17:30:26 +0200
 
