--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 RestAuth 0.6.2 (XX XXXX XXXX)
 
   * Fix loading of validators.
+  * Validator classes now are in CamelCase.
 
 RestAuth 0.6.1 (01 April 2013)
 
