--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+restauth (0.6.1-2) unstable; urgency=low
+
+  * no longer manually install sphinxdoc links
+
+ -- Mathias Ertl <apt-repository@fsinf.at>  Thu, 11 Apr 2013 23:45:03 +0200
+
 restauth (0.6.1-1) unstable; urgency=low
 
   * Version bump from upstream
