--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@ RestAuth 0.6.2 (XX XXXX XXXX)
   * Validator classes now are in CamelCase.
   * Loaded validators are now instances, which mostly enables more rigid
     testing of validator-loading.
+  * Update requirements.txt
   
   Testing:
   * Use djangos backport of unittest in some cases
