--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+restauth (0.6.2-35-g565ec99-1) unstable; urgency=low
+
+  * Version bump from upstream.
+
+ -- Mathias Ertl <apt-repository@fsinf.at>  Sat, 25 May 2013 13:15:55 +0200
+
 restauth (0.6.2-1) unstable; urgency=low
 
   * Version-bump from upstream
