--- a/ChangeLog
+++ b/ChangeLog
@@ -5,8 +5,11 @@ RestAuth 0.6.3 (XX XXXX 2013)
 
   Dependencies:
   * RestAuth is now fully tested with Python3.2 and higher.
-  * Running RestAuth with Python3 requires Django>=1.5 and South>=0.8.
+    * Running RestAuth with Python3 requires Django>=1.5 and South>=0.8.
+	* six is used to ensure Python3 compatability.
   * Add requirements3.txt file which excludes wsgiref as dependency.
+  * On Python2, RestAuth now requires Python2 >= 2.6.5. 
+  * RestAuth now requires Django >= 1.4.2 or greater.
   * Generally relax dependencies in requirements.txt
 
   Command-line scripts:
