--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-restauth (0.6.2-35-g565ec99-2) unstable; urgency=low
+restauth (0.6.3-1) unstable; urgency=low
 
   * Version bump from upstream.
+  * bump dependency information
 
- -- Mathias Ertl <apt-repository@fsinf.at>  Sat, 25 May 2013 13:15:55 +0200
+ -- Mathias Ertl <apt-repository@fsinf.at>  Sat, 01 Jun 2013 11:22:38 +0200
 
 restauth (0.6.2-1) unstable; urgency=low
 
