--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@ RestAuth 0.6.4 (XX XXX XXXX)
   * Fix tests in some python2.6 versions.
   * More consistently lowercase input and output names of users and groups.
   * RestAuth now requires Django 1.6 or newer.
+  * Migrate to app-layout from Django 1.5
 
 RestAuth 0.6.3 (30 May 2013)
 
