--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@ RestAuth 0.6.4 (XX XXX XXXX)
   * RestAuth now requires Django 1.6 or newer.
   * Migrate to app-layout from Django 1.5
   * Improve documentation in many small ways.
+  * Fix listing of subgroups for restauth-groups
 
 RestAuth 0.6.3 (30 May 2013)
 
