--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,12 @@
 RestAuth 0.6.4 (XX XXX XXXX)
 
   * This project now lives on GitHub: https://github.com/RestAuth/server
+  * The restauth import data format now just has a raw 'hash' key which
+    contains a raw hash as stored by the application (plus the "hash"
+	key identifying the type of hash).
+  * The backend interface function set_password_hash now only understands the
+    "algorithm" and "hash" keyword arguments, where "hash" is the raw
+	password hash.
   * Fix tests in some python2.6 versions.
   * More consistently lowercase input and output names of users and groups.
   * RestAuth now requires Django 1.6 or newer.
