--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ restauth (0.6.3-253-g034d639) unstable; urgency=low
   
   * Preperation of the new upstream release.
   * Use mati@restauth.net as maintainer address.
+  * Update dependencies to the requirements of the new release.
 
  -- Mathias Ertl <mati@restauth.net>  Thu, 16 Jan 2014 21:11:56 +0100
 
