--- a/debian/changelog
+++ b/debian/changelog
@@ -2,7 +2,10 @@ restauth (0.6.3-253-g034d639) unstable; urgency=low
   
   * Preperation of the new upstream release.
   * Use mati@restauth.net as maintainer address.
+  * This package is now maintained in the debian branch of the new
+    GitHub-based master repository.
   * Update dependencies to the requirements of the new release.
+  * Remove all patches, none of them were used.
 
  -- Mathias Ertl <mati@restauth.net>  Thu, 16 Jan 2014 21:11:56 +0100
 
