--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-restauth (0.6.3-257-g29c9f0a-1) unstable; urgency=low
+restauth (0.6.3-276-g20d4692-1) unstable; urgency=low
   
   * Preperation of the new upstream release.
   * Use mati@restauth.net as maintainer address.
