--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-restauth (0.6.3-282-g8d4ba2c-1) unstable; urgency=low
+restauth (0.6.3-285-gdc2332a-1) unstable; urgency=low
   
   * Preperation of the new upstream release.
   * Use mati@restauth.net as maintainer address.
