--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-RestAuth 0.6.4 (XX XXX XXXX)
+RestAuth 0.6.4 (09 February 2014)
 
   General:
   * This project now lives on GitHub: https://github.com/RestAuth/server
