--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ restauth (0.6.4-2) unstable; urgency=low
 
   * Correctly install localsettings.py via debian/restauth.pyinstall
   * Do not install testsettings.py
+  * Fix build on trusty with own debian-no-pyshared branch.
 
  -- Mathias Ertl <mati@restauth.net>  Sun, 16 Feb 2014 15:36:52 +0100
 
