--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 RestAuth 0.7.0 (XX XXXX 2014)
 
+  General:
+  * Update requirements.
+
   Documentation:
   * Remove last traces of old git host.
 
