--- a/TODO
+++ b/TODO
@@ -5,6 +5,7 @@
 * Remove SECURE_CACHE setting.
 * backend.create_user still returns a user because of many tests still using it
   in later backend methods - should be removed.
+* Same for backend.create_group.
 * backend.get() should be removed
 * Document DATA_BACKEND setting, update backend documentation.
 
