move two backend functions used by restauth-group to common backend

--- a/TODO
+++ b/TODO
@@ -8,6 +8,7 @@
 * Same for backend.create_group.
 * backend.get() should be removed
 * Document DATA_BACKEND setting, update backend documentation.
+* GroupNotFound/GroupExist should require two params: name and service.
 
 Future:
 
