--- a/TODO
+++ b/TODO
@@ -3,6 +3,7 @@
 * Update RedisBackend.
 * Add ability to set SUPPORTS_VISIBILITY and SUPPORTS_INHERITANCE backend
   properties, write a MemoryBackend-based example.
+* Output a warning if we use --service but backend does not support group visibility.
 * Add LDAP Backend.
 * Add our own in-memory cache in settings that we can use as secure cache.
 * Remove SECURE_CACHE setting.
